<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" android:layout_marginTop="@dimen/layout_margin"
              android:background="#F9CB25" android:visibility="visible">

    <TextView
            android:text="@string/welcome_msg"
            android:id="@+id/welcome_user"
            style="@style/welcome_text_style"/>
    <TextView
            android:text="@string/choose_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/choose_filter_msg" android:textAlignment="viewStart"
            style="@style/welcome_text_style" android:paddingTop="18dp" android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp"/>
    <TextView
            android:text="@string/choose_company"
            android:id="@+id/company"
            style="@style/filter_tags" android:textColor="@android:color/holo_green_dark"/>
    <Spinner
            android:id="@+id/spinner1"
            style="@style/spinner_style"/>
    <TextView
            android:text="@string/choose_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/topic" android:textAppearance="@style/filter_tags"
            android:layout_marginLeft="10dp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/spinner2" android:spinnerMode="dropdown"
            style="@style/spinner_style"/>
    <TextView
            android:text="@string/choose_type_of_interview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/type_of_interview"
            android:textAppearance="@style/filter_tags" android:layout_marginLeft="10dp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/spinner3" android:spinnerMode="dropdown"
            style="@style/spinner_style"/>
    <TextView
            android:text="@string/choose_college"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/college" android:textAppearance="@style/filter_tags"
            android:layout_marginLeft="10dp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/spinner4" android:spinnerMode="dropdown"
            style="@style/spinner_style"/>
    <TextView
            android:text="@string/choose_nature_of_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/nature_of_job"
            android:textAppearance="@style/filter_tags" android:layout_marginLeft="10dp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_alignBottom="@id/nature_of_job"
            android:layout_height="wrap_content" android:id="@+id/spinner5" android:spinnerMode="dropdown"
            style="@style/spinner_style"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"/>
    </ScrollView>
</LinearLayout>
